# nanoCAD-MCP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  QUICKSTART.md  README.en.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/agent/: cad-designer.md  cad-dev.md  cad-engineer.md
.opencode/knowledge/: 3d-modeling-tutorial.md  cad-model-format.md  engineering-standards.md  kinematics.md  materials.md  mechanics.md  parametric-modeling.md  tolerances.md
.opencode/skills/nano-cad-mcp/: SKILL.md
docs/instructions/: 00_nanoCAD_overview.md  01_2d_drawing_commands.md  02_3d_modeling_commands.md  03_dimensions_and_annotation.md  04_blocks_and_references.md  05_layers_and_properties.md  06_server_improvements.md  README.md
engine/.helix_check/: .helix_check.csproj  Program.cs  Test.csproj
engine/CadEngine.Plugin/: CadEngine.Plugin.csproj  HttpServer.cs  PluginEntry.cs
engine/CadEngine.Plugin/Models/: ApiModels.cs
engine/CadEngine.Plugin/Services/: CadContext.cs  DimensionService.cs  DocumentService.cs  EntityService.cs  FeatureService.cs  HatchService.cs  LayerService.cs  MainThread.cs  MainThreadExecutor.cs  MeasurementService.cs  MultiCadService.cs  PrimitiveService.cs  SelectionService.cs  SheetMetalService.cs  SolidService.cs  SymbolService.cs  SystemService.cs  TableService.cs  TransformationService.cs
engine/MapiTest/: AccessibilityCheck.cs  MapiTest.csproj
scripts/: start_nanocad.ps1
server/: README.md  pyproject.toml  setup.py  start_mcp_sse.bat  test_body.json  tmp_check_db.py
server/scripts/: apartment_plan.py  bearing_bracket.py  chair.py  create_lighthouse.py  demo_3d_part.py  demo_bracket.py  demo_engineering_project.py  demo_lite.py  flange_coupling.py  plow_30hp.py
server/src/application/: extended_use_cases.py  use_case_factory.py  use_cases.py
server/src/domain/: entities.py  exceptions.py  interfaces.py
server/src/infrastructure/: __init__.py  cad_repository.py  com_bridge.py  http_bridge.py  safe_bridge.py
server/src/presentation/: context.py  server.py  tool_defs.py  tool_models.py  tool_registry.py  tool_validation.py
server/tests/: conftest.py
server/tests/contract/: test_mcp_protocol.py
server/tests/integration/: run_with_healthcheck.py  test_http_api.py  test_integration_live.py  test_mcp_server.py
server/tests/unit/: test_cad_repository.py  test_cad_repository_errors.py  test_entities.py  test_extended_use_cases.py  test_format_result.py  test_http_bridge.py  test_http_bridge_errors.py  test_safe_bridge.py  test_server.py  test_solid_and_basic_use_cases.py  test_tool_validation.py  test_use_cases.py
